--- a/用户手册.tex
+++ b/用户手册.tex
@@ -1,6 +1,6 @@
 \documentclass[UTF8]{ctexart}
 \usepackage{titlesec}
-\title{图书馆系统\\用户手册}
+\title{Horizon－图书馆系统\\用户手册}
 \author{陈欣昊，林伟鸿，应思豪，吴怡然，杜泓睿，叶昊然}
 \date{\today}
 \begin{document}
